--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "@hexlet/code.",
+  "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/1ce1ceice/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/1ce1ceice/frontend-project-44/actions)",
+  "description": "brain-games",
+  "type": "module" ,
   "bin": {
     "brain-games": "bin/brain-games.js"
-  }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+  
+  
+  
+  
   "author": "",
   "license": "ISC"
+  
 }
 
 
