--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "brain-games",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +23,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.0.0"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
